--- a/chirpstack/templates/postgresql/configmap.yaml
+++ b/chirpstack/templates/postgresql/configmap.yaml
@@ -41,8 +41,8 @@ data:
   002-chirpstack_extensions.sh: |
     #!/bin/bash
     set -e
-    echo "PGPASSWORD: $ROLE_PASSWORD"
-    echo "PGPUSER: $DB_ROLE"
+    export PGPASSWORD="${ROLE_PASSWORD}"
+    export PGUSER="${DB_ROLE}"
     # Determine the PostgreSQL connection parameters
     if [ -z "${POSTGRES_HOST}" ]; then
     echo "Using local PostgreSQL socket for connection."
