--- a/chirpstack/templates/postgresql/secrets.yaml
+++ b/chirpstack/templates/postgresql/secrets.yaml
@@ -1,10 +1,11 @@
 {{- $existingSecret := (lookup "v1" "Secret" .Release.Namespace "db-creds") }}
 {{- if not $existingSecret }}
-{{- $postgresUser :=  $.Values._common.postgres.postgresUser | default (randAlphaNum 64) | b64enc | quote }}
-{{- $adminPassword := $.Values._common.postgres.adminPassword | default (randAlphaNum 64) | b64enc | quote }}
-{{- $password := $.Values._common.postgres.password | default (randAlphaNum 64) | b64enc | quote }}
-{{- $role := $.Values._common.postgres.role | default (randAlphaNum 64) | b64enc | quote }}
-{{- $caCert := $.Values._common.postgres.caCert | default "" | b64enc | quote }}
+{{- $postgresUser :=  .Values._common.postgres.settings.postgresUser | default (randAlphaNum 64) | b64enc | quote }}
+{{- $adminPassword := .Values._common.postgres.settings.adminPassword | default (randAlphaNum 64) | b64enc | quote }}
+{{- $password := .Values._common.postgres.settings.password | default "chirpstack" | b64enc | quote }}
+{{- $role := .Values._common.postgres.settings.role | default "chirpstack" | b64enc | quote }}
+{{- $caCert := .Values._common.postgres.settings.caCert | default (randAlphaNum 64) | b64enc | quote }}
+
 
 apiVersion: v1
 kind: Secret
