added pre-upgrade to certs

--- a/chirpstack/templates/certsSecrets.yaml
+++ b/chirpstack/templates/certsSecrets.yaml
@@ -5,7 +5,7 @@ metadata:
   name: certs
   namespace: {{ .Values._common.namespace | default "chirpstack" }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": pre-install, pre-upgrade
 type: Opaque
 data:
   {{- if $existingSecret }}
