--- a/chirpstack/templates/chirpstack/service.yaml
+++ b/chirpstack/templates/chirpstack/service.yaml
@@ -14,3 +14,23 @@ spec:
   selector:
     app: chirpstack
   type: {{ .Values.chirpstack.service.type | default "ClusterIP" }}
+
+{{- if ((.Values._common).exposeChirpstack).enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: chirpstack
+  name: chirpstack-external
+  namespace: {{ .Values._common.namespace | default "chirpstack" }}
+spec:
+  ports:
+  - name: web
+    port: {{ ((.Values._common).exposeChirpstack).port | default .Values.chirpstack.service.port }}
+    protocol: TCP
+    targetPort: {{ .Values.chirpstack.service.port }}
+  selector:
+    app: chirpstack
+  type: LoadBalancer
+
+{{- end }}
