--- a/chirpstack/templates/api/service.yaml
+++ b/chirpstack/templates/api/service.yaml
@@ -15,6 +15,8 @@ spec:
     app: chirpstack-api
   type: {{ .Values.api.service.type | default "ClusterIP" }}
 
+# External service
+---
 {{- if ((.Values._common).exposeApi).enabled }}
 apiVersion: v1
 kind: Service
