--- a/chirpstack/templates/chirpstack/service.yaml
+++ b/chirpstack/templates/chirpstack/service.yaml
@@ -15,6 +15,8 @@ spec:
     app: chirpstack
   type: {{ .Values.chirpstack.service.type | default "ClusterIP" }}
 
+# External service
+---
 {{- if ((.Values._common).exposeChirpstack).enabled }}
 apiVersion: v1
 kind: Service
