--- a/chirpstack/values.yaml
+++ b/chirpstack/values.yaml
@@ -106,6 +106,7 @@ chirpstack:
   useCommonMqttSettings: true
   config: 
     logging: 
+      level: "debug"
     postgresql:
     redis: 
     api: 
